# jetson-matmul-benchmark

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  benchmark-results.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmark.yml  ci-test.yml  format-check.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp
include/matmul/: harness.hpp  implementation.hpp  matrix.hpp  registry.hpp
include/utils/: utils.h
src/: benchmark_main.cpp  cpu_naive.cpp  gpu_naive.cu  registry.cpp  test_main.cpp
src/harness/: CMakeLists.txt  harness.cpp
src/kernels/: CMakeLists.txt  cpu_blas.cpp  cpu_naive.cpp  cpu_optimized.cpp  gpu_cub.cu  gpu_cublas.cu  gpu_naive.cu  gpu_tiled.cu  registry.cpp
src/kernels/Histogram/: CMakeLists.txt  gpu_naive.cu
src/kernels/MatMul/: CMakeLists.txt  cpu_blas.cpp  cpu_optimized.cpp  gpu_cub.cu  gpu_cublas.cu  gpu_naive.cu  gpu_surface_2d_naive.cu  gpu_surface_2d_tiled.cu  gpu_tensorcore_bf16.cu  gpu_tensorcore_tf32.cu  gpu_texture_1d_naive.cu  gpu_texture_1d_tiled.cu  gpu_texture_2d_naive.cu  gpu_texture_2d_tiled.cu  gpu_tiled.cu  registry.cpp
src/kernels/MatrixVecMul/: CMakeLists.txt  cpu_naive.cpp  gpu_naive.cu
src/kernels/ParallelReduction/: CMakeLists.txt  gpu_naive.cu
src/kernels/PrefixSum/: CMakeLists.txt  gpu_naive.cu
src/kernels/VectorAdd/: CMakeLists.txt  gpu_naive.cu
tests/: CMakeLists.txt  test_main.cpp
